--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: openapi_dart_common
-version: 1.1.1
+version: 2.0.0
 authors:
   - Richard Vowles <richard@bluetrainsoftware.com>
 homepage: https://github.com/dart-ogurets/openapi_dart_common
@@ -7,6 +7,6 @@ description: OpenAPI API common libraries so the generator doesn't generate them
 environment:
   sdk: '>=2.2.0 <3.0.0'
 dependencies:
-  http: '>=0.11.1 <0.13.0'
+  dio: '>= 3.0.3 <4.0.0'
 dev_dependencies:
   test: ^1.3.0
