--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: openapi_dart_common
-version: 2.0.1
+version: 2.0.2
 authors:
   - Richard Vowles <richard@bluetrainsoftware.com>
 homepage: https://github.com/dart-ogurets/openapi_dart_common
@@ -10,3 +10,4 @@ dependencies:
   dio: '>= 3.0.3 <4.0.0'
 dev_dependencies:
   test: ^1.3.0
+  pedantic: ^1.9.0
