--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,12 @@
 name: openapi_dart_common
 version: 3.2.0
-authors:
-  - Richard Vowles <richard@bluetrainsoftware.com>
 homepage: https://github.com/dart-ogurets/openapi_dart_common
 description: OpenAPI API common libraries so the generator doesn't generate them
 environment:
   sdk: '>=2.9.0 <3.0.0'
 dependencies:
   dio: '>=3.0.10 <4.0.0'
-  http_multi_server: 2.2.0
+  http_multi_server: ^2.2.0
 dev_dependencies:
   test: ^1.3.0
   pedantic: ^1.9.0
