--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,10 +3,10 @@ version: 3.2.0
 homepage: https://github.com/dart-ogurets/openapi_dart_common
 description: OpenAPI API common libraries so the generator doesn't generate them
 environment:
-  sdk: '>=2.9.0 <3.0.0'
+  sdk: '>=2.12.0-0 <3.0.0'
 dependencies:
-  dio: '>=3.0.10 <4.0.0'
-  http_multi_server: ^2.2.0
+  dio: '4.0.0-beta5'
+  http_multi_server: ^3.0.0
 dev_dependencies:
   test: ^1.3.0
   pedantic: ^1.9.0
