--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: openapi_dart_common
-version: 3.2.0
+version: 4.0.0
 homepage: https://github.com/dart-ogurets/openapi_dart_common
 description: OpenAPI API common libraries so the generator doesn't generate them
 environment:
-  sdk: '>=2.12.0-0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 dependencies:
   dio: '4.0.0-beta5'
   http_multi_server: ^3.0.0
