--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: openapi_dart_common
-version: 4.0.0-prev1
+version: 4.0.0
 homepage: https://www.featurehub.io
 repository: https://github.com/dart-ogurets/openapi_dart_common
 description: OpenAPI API common libraries so the generator doesn't generate them
 environment:
   sdk: '>=2.12.0 <3.0.0'
 dependencies:
-  dio: '^4.0.0-prev3'
+  dio: '^4.0.0'
 dev_dependencies:
   test: ^1.3.0
   pedantic: ^1.9.0
