--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: openapi_dart_common
-version: 4.1.2
+version: 5.0.0
 homepage: https://www.featurehub.io
 repository: https://github.com/dart-ogurets/openapi_dart_common
 description: OpenAPI API common libraries so the generator doesn't generate them
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.15.0 <3.0.0'
 dependencies:
-  dio: '^4.0.0'
+  dio: '^5.0.0'
 dev_dependencies:
-  test: ^1.3.0
-  pedantic: ^1.9.0
+  test: ^1.23.1
+  flutter_lints: ^2.0.1
