--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=2.15.0 <3.1.0'
 dependencies:
   dio: '^5.0.0'
+  logging: ^1.2.0
 dev_dependencies:
   test: ^1.23.1
   flutter_lints: ^2.0.1
